# sythentic-brain

./: .gitignore  MOM.md  README.md  README.rst  conf.py  index.rst  pyproject.toml
.github/workflows/: codeql-analysis.yml  docs_pages.yaml
src/experiments/: __init__.py
src/psykit_augment/cli/: __init__.py
src/psykit_augment/core/: tunner.py  types.py
src/psykit_augment/datasets/: __init__.py  _download.py  bnci.py  p300.py  seed.py
src/psykit_augment/models/: eegnet.py  vit.py
src/psykit_augment/transforms/: transforms.py
src/tests/: test_datasets.py
