[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "psykit_augment"
version = "0.1.0"
description = ""
authors = ["Chirag Ahuja <cahuja1992@gmail.com>"]


[tool.poetry.scripts]
psykit-augmentor = 'psykit_augment.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
numpy = "^1.22.3"
mne = "^0.24.1"
pooch = "^1.6.0"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]